--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -30,11 +30,11 @@
             android:textStyle="bold"
 
             android:visibility="invisible"
-            app:layout_constraintBottom_toTopOf="@+id/login_confirm"
+            app:layout_constraintBottom_toTopOf="@+id/btn_single_notification_view"
 
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textfield_password_loginform"
+            app:layout_constraintTop_toBottomOf="@id/textview_single_notification_description"
             app:layout_constraintVertical_bias="0.274"
             app:layout_constraintWidth_percent=".8" />
 
@@ -45,7 +45,7 @@
             app:layout_constraintWidth_percent=".8"
             android:layout_height="wrap_content"
 
-            app:layout_constraintBottom_toTopOf="@+id/textfield_password_loginform"
+            app:layout_constraintBottom_toTopOf="@+id/textview_single_notification_description"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -70,7 +70,7 @@
 
             android:textSize="@dimen/text_size_medium"
 
-            app:layout_constraintBottom_toTopOf="@+id/textfield_password_loginform"
+            app:layout_constraintBottom_toTopOf="@+id/textview_single_notification_description"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -88,7 +88,7 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="0dp"
-            android:id="@+id/textfield_password_loginform"
+            android:id="@+id/textview_single_notification_description"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             app:boxBackgroundColor="@color/white"
@@ -125,29 +125,26 @@
 
 
         <TextView
-            android:id="@+id/text_register_loginform"
-            android:visibility="invisible"
+            android:id="@+id/textview_single_notification_delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/register"
             android:fontFamily="sans-serif"
+            android:text="@string/register"
             android:textSize="@dimen/text_size_medium"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias=".5"
 
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button_cancel_loginform"
-            app:layout_constraintVertical_bias=".2" />
-
-
+            app:layout_constraintTop_toBottomOf="@+id/btn_notification_back"
+            app:layout_constraintVertical_bias="0.2" />
 
         <com.google.android.material.button.MaterialButton
             style="@style/main_button_style"
             app:cornerRadius="@dimen/button_radius"
 
 
-            android:id="@+id/login_confirm"
+            android:id="@+id/btn_single_notification_view"
 
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -157,7 +154,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textfield_password_loginform"
+            app:layout_constraintTop_toBottomOf="@+id/textview_single_notification_description"
             app:layout_constraintVertical_bias="0.3"
             app:layout_constraintWidth_percent=".8"
 
@@ -167,7 +164,7 @@
             style="@style/button_secondary"
             app:cornerRadius="@dimen/button_radius"
 
-            android:id="@+id/button_cancel_loginform"
+            android:id="@+id/btn_notification_back"
 
             android:layout_width="0dp"
             app:layout_constraintWidth_percent=".8"
@@ -177,7 +174,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/login_confirm"
+            app:layout_constraintTop_toBottomOf="@+id/btn_single_notification_view"
 
             app:layout_constraintVertical_bias=".1"
             app:layout_constraintHorizontal_bias=".5"
