--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -31,6 +31,7 @@
         app:srcCompat="@android:drawable/ic_dialog_email" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout2"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -38,25 +39,26 @@
             android:id="@+id/button_menu_modificaaccount"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:text="Account"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintWidth_percent="0.8"
-            android:text="Account">
-        </Button>
+            app:layout_constraintVertical_bias="0.774"
+            app:layout_constraintWidth_percent="0.8"></Button>
 
         <Button
             android:id="@+id/button_menu_map"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:text="Test button"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.634"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias=".3"
-            app:layout_constraintWidth_percent="0.8"
-            android:text="Test button">
+            app:layout_constraintVertical_bias="0.623"
+            app:layout_constraintWidth_percent="0.8">
 
         </Button>
 
@@ -64,17 +66,33 @@
             android:id="@+id/button_menu_logout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:text="logout (user)"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/button_menu_modificaaccount"
-            app:layout_constraintWidth_percent="0.8"
-            android:text="logout (user)">
+            app:layout_constraintVertical_bias="0.339"
+            app:layout_constraintWidth_percent="0.8">
 
         </Button>
 
+        <Button
+            android:id="@+id/btn_menu_nuova_notifica_recensione"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="nuova notifica recensione"
+            tools:layout_editor_absoluteX="75dp"
+            tools:layout_editor_absoluteY="269dp" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <Button
+        android:id="@+id/btn_menu_nuova_notifica_ristorante"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Nuova notifica ristorante"
+        app:layout_anchor="@+id/constraintLayout2"
+        app:layout_anchorGravity="center" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
