--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,6 +17,11 @@
         <item name="android:textColor">@drawable/title_splash_color</item>
     </style>
 
+    <style name="sub_title" parent="TextAppearance.AppCompat.Title">
+        <item name="android:textSize">@dimen/text_size_large</item>
+        <item name="android:textColor">@drawable/title_splash_color</item>
+    </style>
+
     <style name="slogan_slash" parent="TextAppearance.AppCompat.Title">
         <item name="android:textSize">@dimen/text_size_medium_large</item>
         <item name="android:textColor">@drawable/slogan_splash_color</item>
