--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -5,23 +5,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".notifications.Activity_Notifications">
-
-    <View
-        android:id="@+id/view_filter_notification"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:background="@color/red"
-        android:scaleType="centerCrop"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent=".2"
-        app:layout_constraintStart_toStartOf="parent"
+    <com.google.android.material.bottomappbar.BottomAppBar
+        android:id="@+id/bottomAppBar"
+        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0"
-        app:layout_constraintWidth_percent="0.">
+        tools:layout_editor_absoluteX="16dp"
+        tools:ignore="BottomAppBar" >
 
-    </View>
+        <ImageView
+            android:layout_width="@dimen/icon_appBar"
+            android:layout_height="@dimen/icon_appBar"
+            android:id="@+id/arrow_back_notification"
+            android:src="@drawable/ic_baseline_arrow_back_24"/>
+    </com.google.android.material.bottomappbar.BottomAppBar>
 
     <fragment
         android:id="@+id/fragment_notification"
@@ -33,7 +32,8 @@
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view_filter_notification"
-        tools:ignore="MissingConstraints"
-        ></fragment>
+        app:layout_constraintTop_toBottomOf="@+id/bottomAppBar"
+        tools:ignore="MissingConstraints"></fragment>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
