--- a/app/src/main/res/layout/card_notification_new.xml
+++ b/app/src/main/res/layout/card_notification_new.xml
@@ -40,18 +40,28 @@
             android:contentDescription="@string/app_name"
             android:padding="5dp"
             android:src="@drawable/ic_baseline_notifications_active_24"
-            app:tint="@color/red"/>
-
-        <!--<ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:id="@+id/icon_new_notification"
-            android:src="@drawable/ic_baseline_fiber_new_24"
-            app:tint="@color/blue_link"
-            android:layout_marginStart="010dp"
+            app:tint="@color/red"
             >
 
-        </ImageView>-->
+        </ImageView>
+            <!--android:src="@drawable/ic_baseline_notifications_active_24"
+            app:tint="@color/red"-->
+
+        <ProgressBar
+            android:id="@+id/progress_bar_notification_card"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_alignStart="@+id/icon_notification"
+            android:layout_alignTop="@+id/icon_notification"
+            android:layout_alignEnd="@+id/icon_notification"
+            android:layout_alignBottom="@+id/icon_notification"
+            android:layout_gravity="center"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="20dp"
+            android:visibility="invisible" />
+
 
         <!--Text View to display Course Name-->
         <TextView
@@ -101,5 +111,15 @@
             android:drawablePadding="2dp"
             android:text="Date"
             />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/icon_notification"
+            android:layout_alignBottom="@+id/icon_notification"
+            android:layout_marginEnd="90dp"
+            android:layout_marginBottom="90dp" />
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
