--- a/app/src/main/res/layout/fragment_notification_list.xml
+++ b/app/src/main/res/layout/fragment_notification_list.xml
@@ -1,19 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".notifications.Fragment_Notification_List">
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/swipe_refresh_notificationlist">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/RV_notification"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:listitem="@layout/card_notification_normal"/>
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-</FrameLayout>
+        <TextView
+            android:id="@+id/textview_filter_notifications_list"
+            style="@style/TextAppearance.AppCompat.Title"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:paddingEnd="200dp"
+            android:paddingStart="20dp"
+            android:gravity="center"
+            android:text="Ordina"
+            app:layout_constraintEnd_toEndOf="@+id/swipe_refresh_notificationlist"
+            app:layout_constraintHorizontal_bias="0.1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="MissingConstraints"></TextView>
+
+
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/search_view_notifications"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:title="Cerca ..."
+            app:actionViewClass="androidx.appcompat.widget.SearchView"
+            app:layout_constraintBottom_toBottomOf="parent"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.099"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textview_filter_notifications_list"
+            app:layout_constraintVertical_bias="0.009"
+            app:showAsAction="ifRoom|collapseActionView" />
+
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swipe_refresh_notificationlist"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/search_view_notifications">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/RV_notification"
+
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+
+                    tools:listitem="@layout/card_notification_normal" />
+
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
