--- a/app/src/main/res/layout-land/activity_notifications.xml
+++ b/app/src/main/res/layout-land/activity_notifications.xml
@@ -38,10 +38,25 @@
 
         android:layout_width="0dp"
         android:layout_height="0dp"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/fragment_notification_land"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bottomAppBar"
+        tools:ignore="MissingConstraints"></fragment>
+
+    <fragment
+        android:id="@+id/fragment_notification_land"
+        class="com.poma.restaurant.notifications.Fragment_Notification"
+
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
 
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/fragment_notification_list"
         app:layout_constraintTop_toBottomOf="@+id/bottomAppBar"
+        app:layout_constraintVertical_bias="0.0"
         tools:ignore="MissingConstraints"></fragment>
 </androidx.constraintlayout.widget.ConstraintLayout>
