--- a/app/src/main/res/layout-land/fragment_notification_list.xml
+++ b/app/src/main/res/layout-land/fragment_notification_list.xml
@@ -20,6 +20,7 @@
         app:layout_constraintHorizontal_bias="0.05"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone"
         tools:ignore="MissingConstraints"></TextView>
 
     <androidx.appcompat.widget.SearchView
@@ -32,7 +33,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
 
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.019"
+        app:layout_constraintHorizontal_bias="0.00"
         app:layout_constraintStart_toEndOf="@+id/textview_filter_notifications_list"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
