--- a/app/src/main/res/layout-land/activity_notifications.xml
+++ b/app/src/main/res/layout-land/activity_notifications.xml
@@ -15,7 +15,8 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="16dp"
         tools:ignore="BottomAppBar"
-        app:title="Notification">
+        app:title="Notification"
+        android:visibility="gone">
         <TextView
             android:id="@+id/textview_notifications_title"
             style="@style/sub_title"
