--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="blue_link">#0645AD</color>
     <color name="grey">#bfbfbf</color>
     <color name="red_alert">#bfbfbf</color>
+    <color name="yellow_star">#ffdd00</color>
 </resources>
