--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -72,5 +72,8 @@
     <!-- AppBar-->
     <dimen name="icon_appBar">50dp</dimen>
 
+    <!-- star-->
+    <dimen name="star">20dp</dimen>
+
 
 </resources>
