--- a/app/src/main/res/menu/menu_user.xml
+++ b/app/src/main/res/menu/menu_user.xml
@@ -12,6 +12,10 @@
             android:id="@+id/nav_user_profile"
             android:icon="@drawable/ic_baseline_person_24"
             android:title="Profile" />
+        <item
+            android:id="@+id/nav_user_restaurant"
+            android:icon="@drawable/ic_baseline_restaurant_24"
+            android:title="Restaurant" />
 
         <item
             android:id="@+id/nav_user_logout"
