--- a/app/src/main/res/menu/menu_user.xml
+++ b/app/src/main/res/menu/menu_user.xml
@@ -13,6 +13,10 @@
             android:icon="@drawable/ic_baseline_person_24"
             android:title="Profile" />
         <item
+            android:id="@+id/nav_user_favourite"
+            android:icon="@drawable/ic_baseline_favorite_24"
+            android:title="Favourite" />
+        <item
             android:id="@+id/nav_user_restaurant"
             android:icon="@drawable/ic_baseline_restaurant_24"
             android:title="Restaurant" />
@@ -21,5 +25,8 @@
             android:id="@+id/nav_user_logout"
             android:icon="@drawable/ic_baseline_logout_24"
             android:title="Logout" />
+        <item
+            android:id="@+id/nav_user_test"
+            android:title="Test" />
     </group>
 </menu>
